--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mesto</title>
-  <link rel="stylesheet" href="./pages/index.css">
+  <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
 </head>
 
 <body>
   <div class="root">
     <header class="header root__section">
-      <img src="./images/logo.svg" alt="mesto logo" class="logo">
+      <img src="<%=require('./images/logo.svg')%>" alt="mesto logo" class="logo">
     </header>
     <div class="profile root__section">
       <div class="user-info">
@@ -30,7 +30,7 @@
     </div>
     <div class="popup">
       <div class="popup__content popup__content_add-place">
-        <img src="./images/close.svg" alt="" class="popup__close">
+        <img src="<%=require('./images/close.svg')%>" alt="" class="popup__close">
         <h3 class="popup__title">Новое место</h3>
         <form class="popup__form" name="newPlace">
           <input type="text" required minlength="2" maxlength="30" pattern="(\s*[\S]+\s*)+" name="name"
@@ -44,7 +44,7 @@
         </form>
       </div>
       <div class="popup__content popup__content_edit-user">
-        <img src="./images/close.svg" alt="" class="popup__close">
+        <img src="<%=require('./images/close.svg')%>" alt="" class="popup__close">
         <h3 class="popup__title">Редактировать профиль</h3>
         <form class="popup__form" name="editUser">
           <input type="text" required name="username" minlength="2" maxlength="30" pattern="(\s*[\S]+\s*)+"
@@ -57,7 +57,7 @@
         </form>
       </div>
       <div class="popup__content popup__content_edit-avatar">
-        <img src="./images/close.svg" alt="" class="popup__close">
+        <img src="<%=require('./images/close.svg')%>" alt="" class="popup__close">
         <h3 class="popup__title">Обновить аватар</h3>
         <form class="popup__form" name="editAvatar">
           <div class="popup__input-container">
@@ -68,23 +68,14 @@
         </form>
       </div>
       <div class="popup__content popup__content_image">
-        <img src="./images/close.svg" alt="" class="popup__close">
+        <img src="<%=require('./images/close.svg')%>" alt="" class="popup__close">
         <img src="" alt="" class="popup__image">
       </div>
     </div>
 
   </div>
-  
-  <script src="./scripts/card.js"></script>
-  <script src="./scripts/cardList.js"></script>
-  <script src="./scripts/popup.js"></script>
-  <script src="./scripts/form.js"></script>
-  <script src="./scripts/formAdd.js"></script>
-  <script src="./scripts/formEdit.js"></script>
-  <script src="./scripts/formEditAvatar.js"></script>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/api.js"></script>
-  <script src="./scripts/app.js"></script>
+
+  <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
 </body>
 
 </html>
